# fastapi-pyinstaller

./: .gitignore  FastApiPyInstaller.spec  app.py  main.py  pyproject.toml  readme.md
