[tool.poetry]
name = "fastapi-pyinstaller"
version = "0.1.0"
description = ""
authors = ["K-RT"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}

[tool.poetry.dev-dependencies]
pyinstaller = "==5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
